--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,18 @@ plugins:
 atom_feed:
   hide: true
 
+lsi: false
+safe: true
+source: /
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
